[feature] add version 5 mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev?currentSchema=uss
-spring.datasource.username=catpacktw
-spring.datasource.password=1qaz2wsx
+spring.data.mongodb.uri=mongodb://catpacktw:1qaz2wsx@localhost:27017
+spring.data.mongodb.database=userInfo
 
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
-
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.configuration.map-underscore-to-camel-case=true
